<resources>

    <string name="app_name">LoadApp</string>

    <!-- Notification -->
    <string name="channel_downloads_description">Download files from the internet.</string>
    <string name="downloading">Downloading</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Failed to download</string>
    <string name="view_details">View details</string>

    <!-- Download Options -->
    <string name="option_load_app">LoadApp - Current repository by Udacity</string>
    <string name="option_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="option_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="option_custom_url">Custom URL</string>

    <!-- Main Screen -->
    <string name="hint_custom_url">Enter custom url here</string>
    <string name="button_download">Download</string>
    <string name="button_downloading">Downloading</string>
    <string name="enter_valid_url">Please enter a valid url.</string>
    <string name="select_a_file">Please select a file to download.</string>

    <!-- Detail Screen -->
    <string name="label_download_result">Download Result</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>

</resources>
