<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        android:src="@drawable/ic_cloud_download_black_200dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_download"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/rg_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/option_load_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/option_load_app"
                    android:textSize="@dimen/default_text_size" />

                <RadioButton
                    android:id="@+id/option_glide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/option_glide"
                    android:textSize="@dimen/default_text_size" />

                <RadioButton
                    android:id="@+id/option_retrofit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/option_retrofit"
                    android:textSize="@dimen/default_text_size" />

                <RadioButton
                    android:id="@+id/option_custom_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/option_custom_url"
                    android:textSize="@dimen/default_text_size" />

            </RadioGroup>

            <EditText
                android:id="@+id/et_custom_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_custom_url"
                android:inputType="textUri"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </ScrollView>

    <com.udacity.loadapp.widgets.LoadingButton
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="20dp"
        app:circularProgressColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:primaryBackgroundColor="@color/colorPrimary"
        app:secondaryBackgroundColor="@color/colorPrimaryDark"
        app:textColor="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
